removed more unused stuff

--- a/khoBlog/templates/account/password_reset.html
+++ b/khoBlog/templates/account/password_reset.html
@@ -1,33 +1,22 @@
 {% extends "sub_base_main_block.html" %}
-
-{% load i18n %}
-{% load account %}
-{% load project_tags %}
-
-{% block head_title %}{% trans "Password Reset" %}
-{% endblock %}
+{% load i18n account project_tags %}
 
 {% block content %}
-
   {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
   {% endif %}
 
   <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
-  <div class="card formcard">
-    <div class="card-body">
-      <form enctype="multipart/form-data" method="post" novalidate="novalidate">
-        <div class="text-red-600 dark:text-flamingo-600">
-          {{ form.non_field_errors }}
-        </div>
-
-        {% form form %}
-
-          <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">{{ title }}</button>
-        </form>
-      </div>
+  <form enctype="multipart/form-data" method="post" novalidate="novalidate">
+    <div class="text-red-600 dark:text-flamingo-600">
+      {{ form.non_field_errors }}
     </div>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
-  {% endblock %}
+    {% form form %}
+
+    <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">{{ title }}</button>
+  </form>
+
+  <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+{% endblock %}
