--- a/khoBlog/templates/account/password_reset_done.html
+++ b/khoBlog/templates/account/password_reset_done.html
@@ -1,10 +1,5 @@
 {% extends "sub_base_main_block.html" %}
-
-{% load i18n %}
-{% load account %}
-
-{% block head_title %}{% trans "Password Reset" %}
-{% endblock %}
+{% load i18n account %}
 
 {% block content %}
   {% if user.is_authenticated %}
