--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -161,6 +161,9 @@
           </a>
         </div>
         <p class="mt-8 text-center text-base text-gray-400 dark:text-jumbo-100">
+          {{ APP_VERSION_NUMBER }} &#8211; {{ APP_VERSION_NAME }}
+        </p>
+        <p class="mt-2 text-center text-base text-gray-400 dark:text-jumbo-100">
           2020 - {{ now.year }} Khodok
         </p>
       </div>
