--- a/khoBlog/templates/authentication/includes/signup_form.html
+++ b/khoBlog/templates/authentication/includes/signup_form.html
@@ -14,130 +14,10 @@
 
   <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
     <div class="bg-white dark:bg-jumbo-900 py-8 px-4 border dark:border-jumbo-800/50 shadow-lg sm:rounded-lg sm:px-10">
-      <form action="{{ form_action }}" method="post" novalidate="novalidate">
-        {% csrf_token %}
+      <section class="mb-6">
+        <p class="text-sm font-medium text-gray-500 dark:text-jumbo-300">Sign up with</p>
 
-        <div class="text-red-700 dark:text-flamingo-400">
-          {{ form.non_field_errors }}
-        </div>
-
-        <div class="hidden-fields-errors">
-          {% for hidden_field in form.hidden_fields %}
-            {{ hidden_field.errors }}
-            {{ hidden_field }}
-          {% endfor %}
-        </div>
-
-        <div>
-          <label for="id_username" class="block text-sm font-medium text-gray-700 dark:text-jumbo-200">
-            Username
-          </label>
-          {% for error in form.username.errors %}
-            <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
-          {% endfor %}
-          <div class="mt-1">
-            {{ form.username|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" }}
-          </div>
-          {% if form.username.help_text %}
-            <span class="text-sm text-gray-700 dark:text-jumbo-200">{{ form.username.help_text }}</span>
-          {% endif %}
-        </div>
-
-        <div>
-          <label for="id_email" class="block text-sm font-medium text-gray-700 dark:text-jumbo-200">
-            Email
-          </label>
-          {% for error in form.email.errors %}
-            <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
-          {% endfor %}
-          <div class="mt-1">
-            {{ form.email|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" }}
-          </div>
-          {% if form.email.help_text %}
-            <span class="text-sm text-gray-700 dark:text-jumbo-200">{{ form.email.help_text }}</span>
-          {% endif %}
-        </div>
-
-        <div>
-          <label for="id_first_name" class="inline-block text-sm font-medium text-gray-700 dark:text-jumbo-200">
-            First name
-          </label>
-          <label for="id_last_name" class="inline-block text-sm font-medium text-gray-700 dark:text-jumbo-200">
-            Last name
-          </label>
-          <div class="mt-1">
-            {{ form.first_name|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" }}
-          </div>
-          <div class="mt-1">
-            {{ form.last_name|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" }}
-          </div>
-        </div>
-
-        <div>
-          <label for="id_password1" class="block text-sm font-medium text-gray-700 dark:text-jumbo-200">
-            Password
-          </label>
-          {% for error in form.password1.errors %}
-            <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
-          {% endfor %}
-          <div class="mt-1">
-            {{ form.password1|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 sm:text-sm" }}
-          </div>
-          {% if form.password1.help_text %}
-            <span class="text-sm text-gray-700 dark:text-jumbo-200">{{ form.password1.help_text }}</span>
-          {% endif %}
-        </div>
-
-        <div>
-          <label for="id_password2" class="block text-sm font-medium text-gray-700 dark:text-jumbo-200">
-            Confirm password
-          </label>
-          {% for error in form.password2.errors %}
-            <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
-          {% endfor %}
-          <div class="mt-1">
-            {{ form.password2|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 sm:text-sm" }}
-          </div>
-          {% if form.password2.help_text %}
-            <span class="text-sm text-gray-700 dark:text-jumbo-200">{{ form.password2.help_text }}</span>
-          {% endif %}
-        </div>
-
-        <div>
-          <label for="id_captcha" class="block text-sm font-medium text-gray-700 dark:text-jumbo-200">
-            Captcha
-          </label>
-          {% for error in form.captcha.errors %}
-            <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
-          {% endfor %}
-          <div class="mt-1">
-            {{ form.captcha|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 sm:text-sm" }}
-          </div>
-          {% if form.captcha.help_text %}
-            <span class="text-sm text-gray-700 dark:text-jumbo-200">{{ form.captcha.help_text }}</span>
-          {% endif %}
-        </div>
-
-        <div>
-          <button type="submit" class="kho-button-text kho-button-bg kho-button-bg-hover w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 mt-2">
-            Sign up
-          </button>
-        </div>
-      </form>
-
-      <div class="mt-6">
-        <div class="relative">
-          <div class="absolute inset-0 flex items-center">
-            <div class="w-full border-t border-gray-300 dark:border-jumbo-700"></div>
-          </div>
-          <div class="relative flex justify-center text-sm">
-            <span class="px-2 bg-white dark:bg-jumbo-900 text-gray-500 dark:text-jumbo-300">
-              Or sign up with
-            </span>
-          </div>
-        </div>
-
-        <div class="mt-6 grid grid-cols-3 gap-3">
+        <div class="mt-1 mb-6 grid grid-cols-3 gap-3">
           <div>
             <a href="{% provider_login_url 'google' %}" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50 dark:bg-jumbo-800 dark:text-jumbo-300 dark:hover:bg-jumbo-900">
               <span class="sr-only">Log in with Google</span>
@@ -165,7 +45,126 @@
             </a>
           </div>
         </div>
-      </div>
+
+        <div class="relative">
+          <div class="absolute inset-0 flex items-center">
+            <div class="w-full border-t border-gray-300 dark:border-jumbo-700"></div>
+          </div>
+          <div class="relative flex justify-center text-sm">
+            <span class="px-2 bg-white dark:bg-jumbo-900 text-gray-500 dark:text-jumbo-300">
+              Or sign up with
+            </span>
+          </div>
+        </div>
+      </section>
+
+      <form action="{{ form_action }}" method="post" novalidate="novalidate">
+        {% csrf_token %}
+
+        <div class="text-red-700 dark:text-flamingo-400">
+          {{ form.non_field_errors }}
+        </div>
+
+        <div class="hidden-fields-errors">
+          {% for hidden_field in form.hidden_fields %}
+            {{ hidden_field.errors }}
+            {{ hidden_field }}
+          {% endfor %}
+        </div>
+
+        <div>
+          <label for="id_username" class="block text-sm font-medium text-gray-700 dark:text-jumbo-200">
+            Username
+          </label>
+          {% for error in form.username.errors %}
+            <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+          {% endfor %}
+          <div class="mt-1">
+            {{ form.username|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"|attr:"placeholder:Username" }}
+          </div>
+          {% if form.username.help_text %}
+            <span class="text-sm text-gray-700 dark:text-jumbo-200">{{ form.username.help_text }}</span>
+          {% endif %}
+        </div>
+
+        <div>
+          <label for="id_email" class="block text-sm font-medium text-gray-700 dark:text-jumbo-200">
+            Email
+          </label>
+          {% for error in form.email.errors %}
+            <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+          {% endfor %}
+          <div class="mt-1">
+            {{ form.email|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"|attr:"placeholder:Emain" }}
+          </div>
+          {% if form.email.help_text %}
+            <span class="text-sm text-gray-700 dark:text-jumbo-200">{{ form.email.help_text }}</span>
+          {% endif %}
+        </div>
+
+        <div>
+          <label for="id_first_name" class="inline-block text-sm font-medium text-gray-700 dark:text-jumbo-200">
+            First name
+          </label>
+          <label for="id_last_name" class="inline-block text-sm font-medium text-gray-700 dark:text-jumbo-200">
+            Last name
+          </label>
+          <div class="mt-1">
+            {{ form.first_name|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"|attr:"placeholder:First name" }}
+          </div>
+          <div class="mt-1">
+            {{ form.last_name|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"|attr:"placeholder:Last name" }}
+          </div>
+        </div>
+
+        <div>
+          <label for="id_password1" class="block text-sm font-medium text-gray-700 dark:text-jumbo-200">
+            Password
+          </label>
+          {% for error in form.password1.errors %}
+            <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+          {% endfor %}
+          <div class="mt-1">
+            {{ form.password1|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 sm:text-sm"|attr:"placeholder:Password" }}
+          </div>
+          {% if form.password1.help_text %}
+            <span class="text-sm text-gray-700 dark:text-jumbo-200">{{ form.password1.help_text }}</span>
+          {% endif %}
+        </div>
+
+        <div>
+          <label for="id_password2" class="block text-sm font-medium text-gray-700 dark:text-jumbo-200">
+            Confirm password
+          </label>
+          {% for error in form.password2.errors %}
+            <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+          {% endfor %}
+          <div class="mt-1">
+            {{ form.password2|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 sm:text-sm"|attr:"placeholder:Confirm password" }}
+          </div>
+          {% if form.password2.help_text %}
+            <span class="text-sm text-gray-700 dark:text-jumbo-200">{{ form.password2.help_text }}</span>
+          {% endif %}
+        </div>
+
+        <div>
+          <label for="id_captcha" class="block text-sm font-medium text-gray-700 dark:text-jumbo-200">
+            Captcha
+          </label>
+          {% for error in form.captcha.errors %}
+            <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+          {% endfor %}
+          <div class="mt-1">
+            {{ form.captcha|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 sm:text-sm"|attr:"placeholder:Captcha" }}
+          </div>
+        </div>
+
+        <div>
+          <button type="submit" class="kho-button-text kho-button-bg kho-button-bg-hover w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 mt-2">
+            Sign up
+          </button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
