fixed a lot of small visual bugs fixed code highlight not working other details

--- a/blog/templates/blog/clone_post.html
+++ b/blog/templates/blog/clone_post.html
@@ -8,6 +8,7 @@
 {% block additional_css %}
   {% compress css %}
   <link rel="stylesheet" href="{% static 'khoBlog/css/selectize.default.css' %}">
+  <link rel="stylesheet" href="{% static 'khoBlog/css/highlight.css' %}" media="screen">
   {% endcompress css %}
 {% endblock additional_css %}
 
