--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,8 +1,10 @@
 {% extends 'sub_base_main_block.html' %}
-{% load static comments comments_xtd super_buttons markdown_extra %}
+{% load static comments comments_xtd super_buttons markdown_extra compress %}
 
 {% block additional_css %}
+  {% compress css %}
   <link rel="stylesheet" href="{% static 'khoBlog/css/highlight.css' %}" media="screen">
+  {% endcompress css %}
 {% endblock additional_css %}
 
 {% block content_main %}
@@ -50,15 +52,15 @@
           <p class="mt-2 text-sm text-gray-500 dark:text-jumbo-200">
             Post <span class="font-bold">#{{ object.pk }}</span> written by
             <!-- space -->
-            <a href="{{ object.author.get_absolute_url }}" class="font-medium text-gray-900 dark:text-jumbo-50">{{ object.author }}</a>
+            <a href="{{ object.author.get_absolute_url }}" class="font-medium text-gray-900 dark:text-jumbo-50 hover:underline">{{ object.author }}</a>
             <!-- space -->
             in
             <!-- space -->
             {% if object.categories %}
               {% if object.get_featured_cat %}
-                <a href="{{ object.get_featured_cat.category.get_absolute_url }}" class="font-medium text-gray-900 dark:text-jumbo-50">{{ object.featured_cat_title }}</a>
+                <a href="{{ object.get_featured_cat.category.get_absolute_url }}" class="font-medium text-gray-900 dark:text-jumbo-50 hover:underline">{{ object.featured_cat_title }}</a>
               {% else %}
-                <a href="{{ object.categories.first.get_absolute_url }}" class="font-medium text-gray-900 dark:text-jumbo-50">{{ object.categories.first }}</a>
+                <a href="{{ object.categories.first.get_absolute_url }}" class="font-medium text-gray-900 dark:text-jumbo-50 hover:underline">{{ object.categories.first }}</a>
               {% endif %}
             {% endif %}
           </p>
@@ -86,7 +88,7 @@
     </aside>
   </div>
 
-  <h3 class="mb-4 text-lg font-semibold text-gray-900 dark:text-jumbo-100 mt-12 border-t-2 border-gray-100 dark:border-jumbo-200">Comments</h3>
+  <h3 id="comments" class="mb-4 text-lg font-semibold text-gray-900 dark:text-jumbo-100 mt-12 border-t-2 border-gray-100 dark:border-jumbo-200">Comments</h3>
 
   {% render_comment_form for post %}
 
