--- a/khoBlog/static/khoBlog/css/highlight.scss
+++ b/khoBlog/static/khoBlog/css/highlight.scss
@@ -396,10 +396,14 @@
     }
 
     .linenos {
-        -webkit-user-select: none; /* Safari */
-        -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* IE10+/Edge */
-        user-select: none; /* Standard */
+        -webkit-user-select: none;
+        /* Safari */
+        -moz-user-select: none;
+        /* Firefox */
+        -ms-user-select: none;
+        /* IE10+/Edge */
+        user-select: none;
+        /* Standard */
         color: gray;
         margin-right: 16px;
         margin-left: 0px;
