--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -194,16 +194,20 @@
         @apply fill-current stroke-current;
     }
 
-    .prose a {
+    .prose :is(a, p) {
         @apply break-words;
+    }
+
+    .prose a {
+        @apply hover:no-underline;
     }
 
     .prose :is(video, iframe, img) {
         @apply max-w-full;
     }
 
-    .prose h1 img {
-        @apply my-0 inline;
+    .prose img {
+        @apply my-0 inline-block;
     }
 
     .prose .highlighttable {
