--- a/khoBlog/templates/tailwind/post_aside.html
+++ b/khoBlog/templates/tailwind/post_aside.html
@@ -64,19 +64,14 @@
 </article>
 
 <article class="mt-6 border-t border-gray-200 dark:border-jumbo-200 py-6 space-y-8">
-  <section>
-    <h2 class="text-sm font-medium text-gray-500 dark:text-jumbo-100">Author</h2>
-    <ul role="list" class="mt-3 space-y-3">
-      <li class="flex justify-start">
-        <a href="{{ object.author.get_absolute_url }}" class="flex items-center space-x-3 hover:underline">
-          <div class="flex-shrink-0">
-            <img class="h-5 w-5 rounded-full" src="{{ object.author.profile_pic.url }}" alt="">
-          </div>
-          <div class="text-sm font-medium text-gray-900 dark:text-jumbo-50">{{ object.author }}</div>
-        </a>
-      </li>
-    </ul>
-  </section>
+  {% if object.url_to_article %}
+    <section>
+      <h2 class="text-sm font-medium text-gray-500 dark:text-jumbo-100">Linked article</h2>
+      <a href="{{ object.url_to_article }}" class="text-sm font-medium text-gray-900 dark:text-jumbo-50 hover:underline">
+        {% firstof object.url_to_article_title object.url_to_article %}
+      </a>
+    </section>
+  {% endif %}
 
   <section>
     <h2 class="text-sm font-medium text-gray-500 dark:text-jumbo-100">Categories</h2>
