sometimes I'm dumb yk

--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -58,8 +58,8 @@
         </div>
 
         <div class="h-fit">
-          {{ filter_form.form.ordering.label_tag }}
-          {{ filter_form.form.ordering|add_class:"form-control" }}
+          {{ filter_form.form.order_by.label_tag }}
+          {{ filter_form.form.order_by|add_class:"form-control" }}
         </div>
 
         <div class="row-start-4 md:col-start-1 md:col-span-2 xl:col-start-3 xl:row-span-full h-fit">
